fix responsive align in contact details

--- a/stylesheets/mobile/contactsMobile.css
+++ b/stylesheets/mobile/contactsMobile.css
@@ -104,7 +104,6 @@
     }
 
     .detailsCard {
-        margin-left: 18px;
         margin-top: 48px;
         gap: 20px;
     }
